# mirui

./: .cha.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.cha/: .gitignore
.cha/plugin-src/: Cargo.toml
.cha/plugin-src/src/: lib.rs
.cha/plugins/: api_misuse.wasm
.github/workflows/: ci.yml  nuttx-check.yml
ci/: patch-nuttx-libstd.sh
docs/: quickstart.md  state-management.md
examples/: absolute_demo.rs  animation_demo.rs  app_demo.rs  book_flip_demo.rs  click_demo.rs  components_demo.rs  compose_backend_demo.rs  compose_backend_dsl.rs  cover_flow_demo.rs  dsl_demo.rs  enchants_demo.rs  flip_card_demo.rs  hello_sdl.rs  image_demo.rs  image_flip_demo.rs  layout_demo.rs  lazy_list_demo.rs  lazy_list_snapshot.rs  nested_scroll_demo.rs  perf_bench.rs  rounded_demo.rs  scroll_demo.rs  sdl_gpu_demo.rs  sim_input_demo.rs  slider_switch_demo.rs  snapshot_cover_flow.rs  spatial_anim_demo.rs  tabbar_demo.rs  tabbar_snapshot.rs  text_demo.rs  text_input_demo.rs  text_input_snapshot.rs  transform_demo.rs  walk_demo.rs  widget_demo.rs
gallery/: Cargo.toml
gallery/examples/: absolute_demo.rs  animation_demo.rs  app_demo.rs  atlas_font_demo.rs  book_flip_demo.rs  builder_form_demo.rs  butterfly_demo.rs  click_demo.rs  components_demo.rs  compose_backend_dsl.rs  composite_demo.rs  cover_flow_demo.rs  custom_view_demo.rs  disabled_demo.rs  dsl_demo.rs  effect_demo.rs  effect_demo_snapshot.rs  effect_glass_demo.rs  enchants_demo.rs  flip_card_demo.rs  gesture_demo.rs  hello_demo.rs  hello_sdl.rs  hover_tour_demo.rs  i18n_demo.rs  icon_demo.rs  image_demo.rs  image_flip_demo.rs  input_feedback_demo.rs  interactive_states_demo.rs  layout_demo.rs  lazy_list_demo.rs  lazy_list_snapshot.rs  life_demo.rs  linux_drm_demo.rs  linux_fb_demo.rs  multi_font_demo.rs  nested_scroll_demo.rs  offscreen_demo.rs  offscreen_modal_demo.rs  (+45 more)
gallery/examples/backends/: compose_backend_demo.rs  compose_backend_dsl.rs  linux_drm_demo.rs  linux_fb_demo.rs  sdl_gpu_demo.rs  sdl_smoke.rs  wgpu_smoke.rs
gallery/examples/tools/: effect_demo_snapshot.rs  hello_sdl.rs  layout_demo.rs  lazy_list_snapshot.rs  lifecycle_suspend.rs  multi_font_snapshot.rs  offscreen_modal_snapshot.rs  perf_bench.rs  perf_collect.rs  sdf_cjk_snapshot.rs  sdf_label_snapshot.rs  sim_input_demo.rs  snapshot_cover_flow.rs  tabbar_snapshot.rs  text_input_snapshot.rs  theme_swap_snapshot.rs  widget_demo.rs  zorder_baseline.rs
gallery/src/: lib.rs
gallery/src/demos/: components.rs  cover_flow.rs  dsl.rs  effect.rs  hello.rs  mod.rs  nested_scroll.rs  rounded.rs  text.rs  transform.rs  widgets.rs
gallery/web/: Cargo.toml  README.md  Trunk.toml  index.html
gallery/web/src/: lib.rs
mirui-macros/: Cargo.toml
mirui-macros/src/: compose.rs  diag.rs  lib.rs  vector.rs  visit_id.rs
mirui-macros/tests/: trybuild.rs
mirui-macros/tests/ui/: on_form_a_inside_body.rs  on_form_a_inside_body.stderr  on_non_tap_with_args.rs  on_non_tap_with_args.stderr  on_qualified_path.rs  on_qualified_path.stderr  on_unknown_event.rs  on_unknown_event.stderr
mirx/: Cargo.toml  README.md
mirx/src/: chunk.rs  crc32.rs  error.rs  flat.rs  format.rs  header.rs  lib.rs
src/: app.rs  input_feedback.rs  lib.rs  plugin.rs  types.rs
src/anim/: ease.rs  mod.rs
src/app/: lifecycle.rs  mod.rs  plugin.rs
src/backend/: framebuf.rs  mod.rs  sdl.rs  sdl_gpu.rs
src/cache/: algorithm.rs  budget.rs  core.rs  factory.rs  handle.rs  inspect.rs  lookup.rs  mod.rs
src/components/: assets.rs  background_blur.rs  button.rs  button_system.rs  checkbox.rs  image.rs  lazy_list.rs  magnetic_membrane.rs  mirror.rs  mod.rs  progress_bar.rs  scroll.rs  scroll_system.rs  slider.rs  switch.rs  tab_pages.rs  tab_view.rs  tabbar.rs  temporal_mix.rs  text.rs  text_input.rs  transform.rs  transform_3d.rs
src/core/: mod.rs
src/draw/: backend.rs  canvas.rs  command.rs  factory.rs  font.rs  membrane.rs  mod.rs  painter.rs  partial.rs  path.rs  raster.rs  renderer.rs  sw.rs  sw_backend.rs  texture.rs
src/ecs/: bundle.rs  entity.rs  mod.rs  query.rs  sparse_set.rs  system.rs  time.rs  world.rs
src/event/: dispatch.rs  focus.rs  gesture.rs  hit_test.rs  input.rs  mod.rs  multi_tap.rs  sim.rs  widget_input.rs
src/feedback/: cursor.rs  input.rs  mod.rs  rotary.rs
src/input/: mod.rs
src/layout/: flex.rs  mod.rs  node.rs
src/perf/: mod.rs
src/plugins/: budget.rs  cache_report.rs  fps_summary.rs  frame_rate.rs  image_resources.rs  input_feedback.rs  mod.rs  perf_report.rs  std_clock.rs
src/render/: canvas.rs  command.rs  factory.rs  membrane.rs  mod.rs  painter.rs  path.rs  raster.rs  renderer.rs  texture.rs
src/resource/: handle.rs  loader.rs  manager.rs  manager_inner.rs  mod.rs  probe.rs
src/state/: mod.rs
src/surface/: framebuf.rs  input_state.rs  mirror.rs  mod.rs  scale.rs  sdl.rs  sdl_gpu.rs  slow.rs  web_canvas.rs  wgpu_surface.rs
src/timer/: mod.rs
src/types/: coord.rs  dimension.rs  fixed.rs  mod.rs  scale.rs  transform.rs  transform_3d.rs  viewport.rs
src/ui/: builder.rs  dirty.rs  id.rs  mod.rs  offscreen.rs  reactive_attr.rs  render_system.rs  state.rs  theme.rs  view.rs
src/widget/: builder.rs  dirty.rs  disabled.rs  id.rs  mod.rs  niche.rs  offscreen.rs  state.rs  (+6 more)
tests/: app_runner.rs  budget_frame_order.rs  compose_backend_basic.rs  compose_backend_fail.rs  dirty_tests.rs  draw_tests.rs  ecs_tests.rs  effect_widget_panic_fix.rs  event_tests.rs  gallery_demo_render_snapshot.rs  gallery_demos.rs  gray_atlas_fixture.rs  gray_render_regression.rs  id_attr.rs  layout_tests.rs  log_bridge.rs  log_macros.rs  match_syntax.rs  multi_font_bundle.rs  niche.rs  offscreen_gate_routing.rs  on_handler_callback_form.rs  on_handler_return.rs  on_handlers.rs  perf_report_builder.rs  plugin_hooks.rs  sdf_atlas_fixture.rs  sdf_render_regression.rs  sdl_poll_event.rs  sim_demo_widgets.rs  slider_business_events.rs  tabbar_selection_events.rs  theme_swap_visual.rs  theme_tests.rs  time_plumbing.rs  timer_macro.rs  toggle_business_events.rs  typed_widget.rs  typed_widget_visual.rs  ui_diagnostics_fail.rs  (+1 more)
xtask/: Cargo.toml
(+282 files in other folders)
