[package]
name = "mirui"
version = "0.11.4"
edition = "2024"
authors = ["Benign X <1341398182@qq.com>"]
license = "MIT"
description = "A lightweight, no_std ECS-driven UI framework for embedded, desktop, and WebAssembly"
repository = "https://github.com/W-Mai/mirui"
homepage = "https://github.com/W-Mai/mirui"
documentation = "https://docs.rs/mirui"
readme = "README.md"
keywords = ["ui", "gui", "ecs", "embedded", "no-std"]
categories = ["gui", "embedded"]
rust-version = "1.85"

[workspace]
members = [".", "xtask", "mirui-macros"]

[dependencies]

[features]
default = ["quad-aa"]
std = []
sdl = ["dep:sdl2", "std"]
sdl-gpu = ["sdl", "dep:sdl2-sys", "dep:lyon", "dep:lru"]
perf = []
# Anti-aliasing for 3D-transformed quads. On `std` this uses a Fixed64
# signed-distance field for smooth coverage; on `no_std` it degrades to
# a 2×2 supersample (5 coverage steps). Disable to get the old v0.9.x
# hard-edge binary fill back — embedded targets that can't spare the
# cycles should `default-features = false`.
quad-aa = []

[dependencies.sdl2]
version = "0.37"
optional = true

[dependencies.sdl2-sys]
version = "0.37"
optional = true

[dependencies.lyon]
version = "1.0"
optional = true

[dependencies.lru]
version = "0.12"
optional = true
default-features = false

[dev-dependencies]
sdl2 = "0.37"
trybuild = "1"

[[example]]
name = "app_demo"
required-features = ["sdl"]

[[example]]
name = "click_demo"
required-features = ["sdl"]

[[example]]
name = "rounded_demo"
required-features = ["sdl"]

[[example]]
name = "text_demo"
required-features = ["sdl"]

[[example]]
name = "dsl_demo"
required-features = ["sdl"]

[[example]]
name = "walk_demo"
required-features = ["sdl"]

[[example]]
name = "image_demo"
required-features = ["sdl"]

[[example]]
name = "absolute_demo"
required-features = ["sdl"]

[[example]]
name = "enchants_demo"
required-features = ["sdl"]

[[example]]
name = "scroll_demo"
required-features = ["sdl"]

[[example]]
name = "nested_scroll_demo"
required-features = ["sdl"]

[[example]]
name = "components_demo"
required-features = ["sdl"]

[[example]]
name = "compose_backend_demo"
required-features = ["sdl"]

[[example]]
name = "compose_backend_dsl"
required-features = ["sdl"]

[[example]]
name = "sdl_gpu_demo"
required-features = ["sdl-gpu"]

[[example]]
name = "perf_bench"
required-features = ["sdl"]

[[example]]
name = "transform_demo"
required-features = ["sdl"]

[[example]]
name = "flip_card_demo"
required-features = ["sdl"]

[[example]]
name = "image_flip_demo"
required-features = ["sdl"]

[[example]]
name = "cover_flow_demo"
required-features = ["sdl"]

[[example]]
name = "animation_demo"
required-features = ["sdl"]

[[example]]
name = "gesture_demo"
required-features = ["sdl"]

[[example]]
name = "sim_input_demo"
required-features = ["sdl"]

[[example]]
name = "spatial_anim_demo"
required-features = ["sdl"]

[[example]]
name = "slider_switch_demo"
required-features = ["sdl"]

[[example]]
name = "book_flip_demo"
required-features = ["sdl"]

[[example]]
name = "hello_sdl"
required-features = ["sdl"]

[[example]]
name = "layout_demo"
required-features = ["sdl"]

[[example]]
name = "widget_demo"
required-features = ["sdl"]

[[example]]
name = "tabbar_demo"
required-features = ["sdl"]

[[example]]
name = "tabbar_snapshot"
required-features = ["sdl"]

[[example]]
name = "text_input_demo"
required-features = ["sdl"]

[[example]]
name = "text_input_snapshot"
required-features = ["sdl"]

[[example]]
name = "lazy_list_demo"
required-features = ["sdl"]

[[example]]
name = "lazy_list_snapshot"
required-features = ["sdl"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies.mirui-macros]
path = "mirui-macros"
