[package]
name = "mirui"
version = "0.13.0"
edition = "2024"
authors = ["Benign X <1341398182@qq.com>"]
license = "MIT"
description = "A lightweight, no_std ECS-driven UI framework for embedded, desktop, and WebAssembly"
repository = "https://github.com/W-Mai/mirui"
homepage = "https://github.com/W-Mai/mirui"
documentation = "https://docs.rs/mirui"
readme = "README.md"
keywords = ["ui", "gui", "ecs", "embedded", "no-std"]
categories = ["gui", "embedded"]
rust-version = "1.85"

[workspace]
members = [".", "xtask", "mirui-macros", "gallery"]

[dependencies]

[features]
default = ["quad-aa"]
std = []
sdl = ["dep:sdl2", "std"]
sdl-gpu = ["sdl", "dep:sdl2-sys", "dep:lyon", "dep:lru"]
perf = []
# Anti-aliasing for 3D-transformed quads. On `std` this uses a Fixed64
# signed-distance field for smooth coverage; on `no_std` it degrades to
# a 2×2 supersample (5 coverage steps). Disable to get the old v0.9.x
# hard-edge binary fill back — embedded targets that can't spare the
# cycles should `default-features = false`.
quad-aa = []

[dependencies.sdl2]
version = "0.37"
optional = true

[dependencies.sdl2-sys]
version = "0.37"
optional = true

[dependencies.lyon]
version = "1.0"
optional = true

[dependencies.lru]
version = "0.12"
optional = true
default-features = false

[dev-dependencies]
trybuild = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies.mirui-macros]
path = "mirui-macros"
