[package]
name = "gallery"
version = "0.25.3"
edition = "2024"
publish = false

[features]
default = ["sdl"]
sdl = ["mirui/sdl", "dep:sdl2"]
sdl-gpu = ["mirui/sdl-gpu", "dep:sdl2"]
wgpu = ["mirui/wgpu"]
web-canvas = ["mirui/web-canvas", "dep:wasm-bindgen", "dep:web-sys"]
linux-fb = ["mirui/linux-fb"]

[dependencies]
mirui = { path = "..", default-features = false, features = ["quad-aa"] }
mirui-macros = { path = "../mirui-macros" }
sdl2 = { version = "0.37", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.122", optional = true }
web-sys = { version = "0.3.99", optional = true, features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Window",
] }

[[example]]
name = "sdl_gpu_demo"
required-features = ["sdl-gpu"]

[[example]]
name = "wgpu_smoke"
required-features = ["wgpu"]

[[example]]
name = "linux_fb_demo"
required-features = ["linux-fb"]
