[package]
name = "mirui-macros"
version = "0.24.0"
edition = "2024"
authors = ["Benign X <1341398182@qq.com>"]
license = "MIT"
description = "Declarative UI DSL macro for mirui — powered by xrune"
repository = "https://github.com/W-Mai/mirui"
publish = true

[lib]
proc-macro = true

[dependencies]
xrune = "1.3"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
