[package]
name = "mirui-macros"
version = "0.32.1"
edition = "2024"
authors = ["Benign X <1341398182@qq.com>"]
license = "MIT"
description = "Declarative UI DSL macro for mirui — powered by xrune"
repository = "https://github.com/W-Mai/mirui"
publish = true

[lib]
proc-macro = true

[dependencies]
xrune = "1.9"
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
mirui = { path = ".." }
