[package]
name = "mirx"
version = "0.29.3"
edition = "2024"
authors = ["Benign X <1341398182@qq.com>"]
license = "MIT"
description = "MIRX binary image format — flat & chunk-based container for ahead-of-time UI assets"
repository = "https://github.com/W-Mai/mirui"
readme = "README.md"
keywords = ["mirx", "mirui", "image", "binary", "texture"]
categories = [
    "multimedia::images",
    "encoding",
    "embedded",
    "no-std",
    "graphics",
]
publish = true

[lib]

[features]
default = []
std = []
