[workspace]

[package]
name = "api-misuse"
version = "0.27.4"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cha-plugin-sdk = { git = "https://github.com/W-Mai/Cha", tag = "v1.14.0" }
wit-bindgen = "0.55"

[dev-dependencies]
cha-plugin-sdk = { git = "https://github.com/W-Mai/Cha", tag = "v1.14.0", features = ["test-utils"] }
