[package]
name = "gallery-web"
version = "0.27.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
gallery = { path = "..", default-features = false, features = ["web-canvas"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.122"
js-sys = "0.3.99"
web-sys = { version = "0.3.99", features = ["Location", "Window"] }
console_error_panic_hook = "0.1"
